# nlytics

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 20260304151348_create_events_table.down.sql  20260304151348_create_events_table.up.sql
src/: config.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  repositories.rs  services.rs
src/database/: postgres.rs  redis.rs
src/handlers/: events.rs  online.rs
src/middleware/: auth.rs
src/models/: event.rs  online.rs
src/repositories/: events.rs  online.rs  redis.rs
src/repositories/postgres/: events.rs
src/repositories/redis/: online.rs
src/routes/: api.rs
src/routes/api/: events.rs  online.rs
src/services/: events.rs  online.rs
